@@ -1,5 +1,8 @@
 DATE       AUTHOR   CHANGE
 ---------- -------- -----------------------------------------------------------
+2003-10-27 allenb   Extended serial port interface.  There is now support
+                    for getting/setting various terminal lines.
+                    NEW VERSION: 0.29.0
 2003-09-23 allenb   Added RWMutexPoix.  This just wraps the standard posix
                     rwmutex methods.
                     NEW VERSION: 0.28.1
